--- a/style.css
+++ b/style.css
@@ -15,3 +15,41 @@ body {
   max-height: 100%;
   margin: auto;
 }
+
+/* flex container styling */
+
+.flex-container-1 {
+  float: right;
+  flex-wrap: wrap;
+}
+
+.flex-container-2 {
+  width: 75px;
+  height: 75px;
+  position: absolute;
+  flex-shrink: inherit;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-container-3 {
+  max-width: 650px;
+  max-height: 650px;
+}
+
+.flex-container-4 {
+  font-weight: bold;
+  float: left;
+  text-decoration-color: #7d97ad;
+
+}
+
+.flex-container-5 {
+  flex-grow: 4;
+  max-width: 100%;
+  max-height: 100%;
+  flex-flow: row;
+  flex-wrap: wrap;
+  padding: 5px;
+  margin: 5px;
+}
