--- a/style.css
+++ b/style.css
@@ -53,3 +53,10 @@ body {
   padding: 5px;
   margin: 5px;
 }
+
+/*styling for image responsive class*/
+
+.img-responsive {
+  max-width: 100%;
+  max-height: 100%;
+}
