--- a/style.css
+++ b/style.css
@@ -60,3 +60,29 @@ body {
   max-width: 100%;
   max-height: 100%;
 }
+
+/* styling columns */
+
+.column-1 {
+  display: inline-flex;
+  max-width: 300px;
+  max-height: 250px;
+  padding: 6px;
+  margin: 6px;
+}
+
+.column-2 {
+  display: inline-flex;
+  max-width: 300px;
+  max-height: 250px;
+  padding: 6px;
+  margin: 6px;
+}
+
+.column-3 {
+  display: inline-flex;
+  max-width: 300px;
+  max-height: 250px;
+  padding: 6px;
+  margin: 6px;
+}
